--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "build-fast": "tsup src/index.ts --format cjs,esm",
     "build": "pnpm run build-fast --dts-resolve",
     "test": "vitest run",
-    "prepublishOnly": "pnpm run build"
+    "prepublishOnly": "pnpm run build",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix"
   },
   "devDependencies": {
-    "@2nthony/prettier-config": "1.0.1",
-    "prettier": "2.8.3",
+    "@2nthony/eslint-config": "*",
+    "eslint": "^8.35.0",
     "tsup": "6.6.3",
     "typescript": "4.9.5",
     "vitest": "0.29.2"
