--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    if: "!contains(github.event.head_commit.message, 'skip-ci')"
+    if: '!contains(github.event.head_commit.message, ''skip-ci'')'
 
     strategy:
       matrix:
@@ -23,7 +23,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: lts/* 
+          node-version: lts/*
 
       - name: Cache ~/.pnpm-store
         uses: actions/cache@v3
@@ -49,13 +49,13 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: ['test']
-    if: "!contains(github.event.head_commit.message, 'skip-release') && !contains(github.event.head_commit.message, 'skip-ci') && github.event_name != 'pull_request'"
+    needs: [test]
+    if: '!contains(github.event.head_commit.message, ''skip-release'') && !contains(github.event.head_commit.message, ''skip-ci'') && github.event_name != ''pull_request'''
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: lts/* 
+          node-version: lts/*
       - name: Cache ~/.pnpm-store
         uses: actions/cache@v3
         env:
