chore: add vitest globals to tsconfig (#52)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "allowJs": true,
     "noEmit": true,
     "outDir": "dist",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+
+    "types": ["vitest/globals"]
   }
 }
